--- a/resource-overlay/eqs/SettingsElixirOverlay/res/values/strings.xml
+++ b/resource-overlay/eqs/SettingsElixirOverlay/res/values/strings.xml
@@ -13,6 +13,10 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Elixir rom device maintainer name-->
     <string name="elixir_maintainer">Nishant Kumar</string>
+
+    <!-- Whether to show min/max refresh rate in display settings -->
+    <bool name="config_show_refresh_rate_controls">true</bool>
 
 </resources>
